--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -3,12 +3,12 @@
 
 <div class="calendar">
     <div class="calendar_actions">
-        <button (click)="changeMonth(0)">Prev</button>
+        <p class="calendar_arrow" (click)="changeMonth(0)">&#x25C2;</p>
         <div>
             <span>{{daysData?.year}}</span> / 
             <span>{{allMonths[daysData?.month || 0]}}</span>
         </div>
-        <button (click)="changeMonth(1)">Next</button>
+        <p class="calendar_arrow" (click)="changeMonth(1)">&#9656;</p>
     </div>
     <div class="calendar_header">
         <div class="calendar_day calendar_header_day" *ngFor="let day of days | keyvalue">
@@ -18,10 +18,9 @@
     <div class="calendar_cont">
         <div
             class="calendar_day"
-            [ngClass]="{'calendar_day--old':!dayData.active}"
-            [ngClass]="{'calendar_day--current':dayData.current}"
+            [ngClass]="{'calendar_day--old': !dayData.active, 'calendar_day--current': dayData.current}"
             *ngFor="let dayData of daysData?.days">
-            {{dayData.weekDay}} {{dayData.dayNumber}} 
+            {{dayData.dayNumber}} 
         </div>
     </div>
 </div>
