--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1,12 +1,17 @@
 .calendar {
     max-width: 1100px;
     margin: 0 auto;
+    &_arrow {
+        cursor: pointer;
+        font-size: 25px;
+    }
     &_actions {
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
-        width: 250px;
+        width: 180px;
         padding: 25px 0;
+        align-items: center;
     }
     &_cont {
         display: flex;
@@ -21,9 +26,11 @@
     }
     &_day {
         flex: 0 0 calc(100% / 7);
+        height: 100px;
         padding: 5px;
-        border: 1px solid burlywood;
+        border: 0.5px solid #589d8b;
         cursor: pointer;
+        font-size: 14px;
         &--old {
             color: grey;
             pointer-events: none;
