--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +6,5 @@
 }
 
 body {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1rem;
-    
+    font-family: 'Roboto';
 }
