--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -26,17 +26,17 @@
     }
     &_day {
         flex: 0 0 calc(100% / 7);
-        height: 100px;
+        height: 70px;
         padding: 5px;
         border: 0.5px solid #589d8b;
         cursor: pointer;
-        font-size: 14px;
+        font-size: 16px;
         &--old {
             color: grey;
             pointer-events: none;
         }
         &--current {
-            color: crimson;
+            background: #7279db;
         }
     }
 }
