--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -2,3 +2,6 @@
     <p>{{day | json}}</p>
 </ng-container>
 
+<button (click)="createEvent(day)">Create</button>
+<button (click)="removeEvent(day)">Remove</button>
+
