--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -2,13 +2,9 @@
     <p>{{day | json}}</p>
 </ng-container>
 
-<button (click)="createEvent(day)">Create</button>
-<button (click)="removeEvent(day)">Remove</button>
-<button (click)="getEvent(day)">Get</button>
 <button (click)="sendM('HELLO MUCHER FUCKERRR!!!!!!')">SendM</button>
 
-
-<form [formGroup]="myForm" class="main-form" action="">
+<form *ngIf="day" (ngSubmit)="onSubmit()" [formGroup]="myForm" class="main-form" action="">
     <label for="">description</label>
     <input formControlName="description" type="text">
     <label for="">text</label>
@@ -19,6 +15,6 @@
     <input formControlName="amountToRepeat" type="text">
     <div>
         <button type="submit">Submit</button>
-        <button>Delete</button>
+        <button (click)="removeEvent(day)" type="button">Delete</button>
     </div>
 </form>
