--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -38,5 +38,8 @@
         &--current {
             background: #7279db;
         }
+        &--has-event {
+            background: #444bb6;
+        }
     }
 }
