--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -7,15 +7,19 @@
         </div>
         <p class="calendar_arrow" (click)="changeMonth(1)">&#9656;</p>
     </div>
-    <div class="calendar_header">
+    <div *ngIf="!isMobile" class="calendar_header">
         <div class="calendar_day calendar_header_day" *ngFor="let day of days | keyvalue">
             {{day.value}}
         </div>
     </div>
-    <div class="calendar_cont">
+    <div class="calendar_cont" [ngClass]="{'calendar_cont--momile': isMobile}">
         <div
             class="calendar_day"
-            [ngClass]="{'calendar_day--old': !dayData.active, 'calendar_day--current': dayData.current, 'calendar_day--has-event': dayData?.events.length}"
+            [ngClass]="{
+                'calendar_day--old': !dayData.active,
+                'calendar_day--current': dayData.current,
+                'calendar_day--has-event': dayData?.events.length
+            }"
             *ngFor="let dayData of daysData?.days"
             (click)="openEvent(dayData)">
             {{dayData.dayNumber}}
