--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -2,8 +2,24 @@
     display: flex;
     flex-direction: column;
     max-width: 300px;
-    margin: 0 auto;
-    border: 3px solid black;
+    margin: 0 auto 20px;
+    border: 3px solid #11998e;
     padding: 15px;
     border-radius: 15px;
+    &_actions-block {
+        display: flex;
+        justify-content: center;
+    }
+    &_events {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 5px 0;
+    }
+    &_event {
+        cursor: pointer;
+        padding: 5px;
+        border: 1px solid grey;
+        margin: 0 3px;
+    }
 }
