--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-calendar></app-calendar>
-<app-event></app-event>
+<div class="container">
+  <header>
+    <app-selector></app-selector>
+  </header>
+
+  <main>
+    <app-calendar></app-calendar>
+  </main>
+
+  <div>
+    <app-organizer></app-organizer>
+  </div>
+</div>
