--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,28 +1,30 @@
-<div class="calendar">
-    <div class="calendar_actions">
-        <p class="calendar_arrow" (click)="changeMonth(0)">&#x25C2;</p>
-        <div>
-            <span>{{daysData?.year}}</span> / 
-            <span>{{allMonths[daysData?.month]}}</span>
-        </div>
-        <p class="calendar_arrow" (click)="changeMonth(1)">&#9656;</p>
-    </div>
-    <div *ngIf="!isMobile" class="calendar_header">
-        <div class="calendar_day calendar_header_day" *ngFor="let day of days | keyvalue">
-            {{day.value}}
-        </div>
-    </div>
-    <div class="calendar_cont" [ngClass]="{'calendar_cont--momile': isMobile}">
-        <div
-            class="calendar_day"
-            [ngClass]="{
-                'calendar_day--old': !dayData.active,
-                'calendar_day--current': dayData.current,
-                'calendar_day--has-event': dayData?.events.length
-            }"
-            *ngFor="let dayData of daysData?.days"
-            (click)="openEvent(dayData)">
-            {{dayData.dayNumber}}
-        </div>
-    </div>
-</div>
+<table>
+  <thead>
+  <tr>
+    <th>Sun</th>
+    <th>Mon</th>
+    <th>Tue</th>
+    <th>Wen</th>
+    <th>Thu</th>
+    <th>Fri</th>
+    <th>Sat</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <tr *ngFor="let week of calendar">
+    <td
+      *ngFor="let day of week.days"
+      [class.disabled]="day.disabled"
+      (click)="select(day.value)"
+    >
+      <span
+        [class.selected]="day.selected"
+        [class.active]="day.active"
+      >
+        {{ day.value | moment:'ddd DD' }}
+      </span>
+    </td>
+  </tr>
+  </tbody>
+</table>
