--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1,49 +1,33 @@
-.calendar {
-    max-width: 1100px;
-    margin: 0 auto 20px;
-    &_arrow {
-        cursor: pointer;
-        font-size: 25px;
+table {
+  width: 100%;
+  margin-bottom: 1rem;
+  border-collapse: collapse;
+
+  td, th {
+    border: 1px solid #000;
+    padding: .5rem 1rem;
+  }
+
+  td {
+    text-align: center;
+    transition: all .2s;
+
+    &.disabled {
+      opacity: .5;
     }
-    &_actions {
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-        width: 180px;
-        padding: 25px 0;
-        align-items: center;
+
+    &:hover:not(.disabled) {
+      background: #eee;
+      cursor: pointer;
     }
-    &_cont {
-        display: flex;
-        flex-wrap: wrap;
-        &--momile {
-            flex-direction: column;
-            padding: 0 20px;
-        }
-    }
-    &_header {
-        display: flex;
-        width: 100%;
-        &_day {
-            font-weight: bold;
-        }
-    }
-    &_day {
-        flex: 0 0 calc(100% / 7);
-        height: 70px;
-        padding: 5px;
-        border: 0.5px solid #589d8b;
-        cursor: pointer;
-        font-size: 16px;
-        &--old {
-            color: grey;
-            pointer-events: none;
-        }
-        &--current {
-            border: 2px solid red;
-        }
-        &--has-event {
-            background: #444bb6;
-        }
-    }
+  }
+
+  .active {
+    color: var(--primary-color);
+    font-weight: bold;
+  }
+
+  .selected {
+    color: blue;
+  }
 }
