--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -16,6 +16,10 @@ table {
       opacity: .5;
     }
 
+    &.has-tasks {
+      background: rgb(102, 169, 172);
+    }
+
     &:hover:not(.disabled) {
       background: #eee;
       cursor: pointer;
