--- a/src/app/organizer/organizer.component.html
+++ b/src/app/organizer/organizer.component.html
@@ -1,6 +1,6 @@
 <section>
   <header>
-    Organizer: <strong>{{dateService.date | async | moment:'DD.MM.YYYY'}}</strong>
+    <strong>{{dateService.date | async | moment:'DD.MM.YYYY'}}</strong>
     <hr />
   </header>
 
