--- a/src/app/selector/selector.component.scss
+++ b/src/app/selector/selector.component.scss
@@ -2,14 +2,9 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px 0;
+}
 
-  span {
-    margin: 0 2rem;
-    text-align: center;
-    width: 200px;
-  }
-
-  i {
-    cursor: pointer;
-  }
+span {
+  margin: 0 8px;
 }
