--- a/src/app/selector/selector.component.html
+++ b/src/app/selector/selector.component.html
@@ -1,13 +1,6 @@
 <p>
-
-  <i class="material-icons" (click)="go(-1)">arrow_left</i>
-
-
-  <span>
-    {{ dateService.date | async | moment }}
-  </span>
-
-
-  <i class="material-icons" (click)="go(1)">arrow_right</i>
-
+  <span (click)="go(-1)">Prev month</span>
+  <span>{{dateService.date | async | moment}}</span>
+  <span (click)="go(1)">Next month</span>
+  <span (click)="setNow()">Now</span>
 </p>
