--- a/src/app/organizer/organizer.component.scss
+++ b/src/app/organizer/organizer.component.scss
@@ -7,11 +7,16 @@ section {
   }
 }
 
+span {
+  word-break: break-word;
+}
+
 .task {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  padding: .5rem 1rem;
+  align-items: center;
+  padding: .5rem;
   border: 1px solid #ccc;
   margin-bottom: .5rem;
 }
