--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@ body {
   color: #333;
 }
 
+footer {
+  margin-top: 50px;
+}
+
 a {
   color: var(--primary-color);
   text-decoration: none;
@@ -58,7 +62,6 @@ table th {
 }
 
 .btn {
-  display: inline-block;
   background: var(--light-color);
   color: #333;
   padding: .4rem 1.3rem;
