--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -2,22 +2,31 @@ table {
   width: 100%;
   margin-bottom: 1rem;
   border-collapse: collapse;
-
+  box-shadow: 0px 3px 7px -2px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  
   td, th {
-    border: 1px solid #000;
-    padding: .4rem 0.6rem;
+    padding: 0.6rem;
   }
 
   td {
     text-align: center;
     transition: all .2s;
+    span {
+      height: 32px;
+      width: 32px;
+      border-radius: 50%;
+      line-height: 32px;
+      display: inline-block;
+    }
 
     &.disabled {
       opacity: .5;
     }
 
-    &.has-tasks {
-      background: rgb(102, 169, 172);
+    &.has-tasks span {
+        color: white;
+        background: rgba(119, 207, 184, 1);
     }
 
     &:hover:not(.disabled) {
@@ -27,11 +36,10 @@ table {
   }
 
   .active {
-    color: var(--primary-color);
-    font-weight: bold;
+    background: rgba(119, 207, 184, 0.2);
   }
 
   .selected {
-    color: blue;
+    color: blue !important;
   }
 }
