--- a/src/app/organizer/organizer.component.scss
+++ b/src/app/organizer/organizer.component.scss
@@ -1,5 +1,6 @@
 section {
-  border: 1px solid #000;
+  box-shadow: 0px 3px 7px -2px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
   padding: 1rem;
 
   header {
