--- a/src/app/selector/selector.component.scss
+++ b/src/app/selector/selector.component.scss
@@ -1,10 +1,25 @@
-p {
+.selector-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 10px 0;
+  justify-content: space-between;
+  padding: 0.6rem;
+  &_actions-block {
+    width: 170px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+  }
 }
 
-span {
-  margin: 0 8px;
+.arrow {
+  border-bottom: 2px solid grey;
+  border-left: 2px solid grey;
+  height: 10px;
+  width: 10px;
+  &--left {
+    transform: rotate(45deg);
+  }
+  &--right {
+    transform: rotate(-135deg);
+  }
 }
